# pipestream

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/pipestream/: buffer_view.hpp  fd.hpp  pipebuf.hpp  pipestream.hpp  unique_fd.hpp
tests/: CMakeLists.txt  mocks.hpp  test_buffer_view.cpp  test_fd.cpp  test_pipebuf.cpp  test_unique_fd.cpp  testutils.hpp
